--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Хихинкали</title>
   </head>
   <body>
@@ -10,8 +11,8 @@
       <div class="container">
         <nav class="menu">
           <a class="menu-item" href="https://xixincali.ru/menu">МЕНЮ</a>
-          <a class="menu-item" href="">КУХНЯ</a>
-          <a class="menu-item" href="">ВИНО</a>
+          <a class="menu-item" href="https://xixincali.ru/КУХНЯ">КУХНЯ</a>
+          <a class="menu-item" href="https://xixincali.ru/ВИНО">ВИНО</a>
         </nav>
         <div class="btn"><a class="btn-link" href="">Заказать столик</a></div>
       </div>
@@ -20,8 +21,8 @@
         <div class="one-text">
           Одна из лучших хинкальных в мире, по мнению наших поваров.
         </div>
-        <div class="btn-btn-green"></div>
-        <a href="" class="btn-link-green">Хинкальное меню</a>
+        <div class="one-btn"></div>
+        <a href="" class="btn-green">Хинкальное меню</a>
       </div>
     </div>
   </body>
